# VRWall

./: .gitmodules  README.md
Configuration/: README_overlap.md  concat_json  sqlt.json  vmbuilder.py
UnityProject/VRWALL/: .gitignore
UnityProject/VRWALL/Assets/: DefaultNetworkPrefabs.asset  WSATestCertificate.pfx
UnityProject/VRWALL/Assets/Editor/: MeasureToolSettings.asset
UnityProject/VRWALL/Assets/Editor/Migration/: AddVuforiaEnginePackage.cs
UnityProject/VRWALL/Assets/MRTK.Generated/: MRTKSettings.asset
UnityProject/VRWALL/Assets/Materials/: Material.mat  Red.mat
UnityProject/VRWALL/Assets/Plugins/: ProcessVNC.compute  libvnc.cs
UnityProject/VRWALL/Assets/Plugins/WSA/: vncclient.lib
UnityProject/VRWALL/Assets/Prefab/: CommandeModule.prefab  KeyboardPreview.prefab  User.prefab  VNC.prefab
UnityProject/VRWALL/Assets/Resources/: VuforiaConfiguration.asset
UnityProject/VRWALL/Assets/Scenes/: VuforianTest.unity  WorkingArea.unity
UnityProject/VRWALL/Assets/Scripts/Network/: AppState.cs  ClientNetworkTransform.cs  (+2 more)
UnityProject/VRWALL/Assets/StreamingAssets/: ConfigurationWall.json  ConfigurationWall.json.orig  ConfigurationWall_smp.json
UnityProject/VRWALL/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
UnityProject/VRWALL/ProjectSettings/: EditorBuildSettings.asset  MixedRealityOpenXRValidationSettings.asset  ProjectSettings.asset  TagManager.asset
UnityProject/VRWALL/QCAR/: lh  somedata16
libVNCUnity/: CMakeLists.txt
libVNCUnity/src/Headers/: LibvncUnity.hpp  VncID.hpp
libVNCUnity/src/Imp/: LibvncUnity.cpp  UFrame.cpp
(+13 files in other folders)
